[package]
name = "ouou_raytracing"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.6.1"
image = "0.24.5"

[dev-dependencies]
criterion = "0.4.0"
flamegraph = "0.6.2"
function_name = "0.3.0"

[profile.release]
# To apply flamegraph
debug = true

[profile.bench]
debug = true